align JMH settings with best practices: 3 forks, 5 warmup, fixed heap
All 5 benchmark classes now use:
- @Fork(value = 3, jvmArgs = {"-Xmx2g", "-Xms2g"})
- @Warmup(iterations = 5, time = 2)
- @Measurement(iterations = 5, time = 2)

Previously used @Fork(1) and @Warmup(iterations = 3) which risks
JIT contamination from a single fork and insufficient warmup for
complex code paths. Fixed heap prevents GC variability.

Runner script updated to use annotation defaults by default,
with --quick mode overriding to 1 fork / 2 warmup / 3 measurement
for fast iteration.